fixed bug on mobile screen & GET method in index.cat.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    /*    background-color: white;*/
     background-image: url(../images/cool-background.png);
     background-size: cover;
     font-family: 'Copperplate Gothic Light';
@@ -46,7 +45,6 @@ header {
 #logo {
     font-size: 30px;
     font-weight: bold;
-    /* background-color: rgba(240, 248, 255, 0.1); */
     border-radius: 5px;
     justify-content: center;
     flex-direction: row;
@@ -72,7 +70,6 @@ header {
 
 #logo img,
 #logo span {
-    /*    width: auto;*/
     height: 40px;
 }
 
@@ -95,7 +92,6 @@ header {
 
 aside {
     background-color: rgba(230, 247, 217, 0.4);
-    /*    width: 100%;*/
     text-align: center;
     justify-items: center;
     display: flex;
@@ -158,14 +154,14 @@ nav div {
 }
 
 .title {
-    /*    height: 50px;*/
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
 }
 
 .show {
-    display: grid !important;
+    display: grid;
+     /* !important; */
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas:
@@ -174,14 +170,13 @@ nav div {
         "img con"
         "download con";
     gap: 15px;
-    padding-top: 30px;
+    padding: 20px;
+    
 }
 
 .show div {
-    /*    border: 1px solid black;*/
     background: rgba(244, 234, 234, 0.25);
     border-radius: 5px;
-    /*    width: 100%;*/
 }
 
 .show .btn {
@@ -216,18 +211,23 @@ nav div {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    /*    width: 100%;*/
 
 }
 
-
+#flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px 0px 10px 0px;
+    font-weight: 900;
+    color: black;
+    flex-wrap: wrap;
+}
 .flex {
     background-color: rgba(0, 128, 0, 0.5);
     display: flex;
     flex-direction: row;
     align-items: center;
-    /*    margin: 10px;*/
-    /* width: auto; */
     margin: 10px 0px 10px 0px;
     font-weight: 400;
     color: azure;
@@ -280,7 +280,7 @@ nav div {
 }
 
 table {
-    width: 60%;
+    width: 65%;
 }
 
 tr,
@@ -301,7 +301,8 @@ td {
 
 .error {
     color: orangered;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: 900;
 }
 
 div > label {
@@ -332,7 +333,6 @@ div#small:hover > div.hidden {
     z-index: 1;
     position: absolute;
     padding-right: 20px;
-    /*    top: 300px;*/
     background: rgba(255, 255, 255, 0.63);
 }
 
@@ -377,25 +377,29 @@ aside.edit {
     width: 100%;
 }
 
-@media screen and (max-width: 735px) {
-aside .show {
+@media screen and (max-width: 780px) {
+
+body {
+    margin: 0;
+}
+.show {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 }
-
-
-
-}
-@media screen and (max-width: 600px) {
-   /* #header {
-        background: rgba(240, 248, 255, 0.1) !important;
+.show div {
+    width: 100%;
+    flex-wrap: wrap;
+   }
+table {
+    width: 98%;
     }
-    #logo {
-        background: transparent;
 
-    } */
-    #header #logo a {
+#small,
+.show img {
+        max-width: 100%;
+    }
+ #header #logo a {
         display: flex;
         flex-direction: column;
         justify-items: center;
